Fix head-wrap position

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1783,6 +1783,11 @@ html {
 .top-navigation li a {
   decoration: none;
   border-bottom: 0 solid transparent;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
 }
 #main {
   counter-reset: captions;
@@ -2790,8 +2795,12 @@ img.mfp-img {
     margin-left: 0%;
     margin-right: 0%;
   }
+  .image-wrap .headline-wrap,
   .image-wrap:after {
     left: 25%;
+  }
+  .image-wrap .headline-wrap {
+    margin-left: 0;
   }
   #main article {
     display: inline;
@@ -2887,7 +2896,7 @@ img.mfp-img {
     left: 33.333333333%;
   }
   .image-wrap .headline-wrap {
-    margin-left: 33.333333333333336%;
+    margin-left: 8.333333333333334%;
   }
   #main article {
     display: inline;
